<resources>
    <string name="app_name">EmployeeManagement</string>
    <string name="intro_msg">Employee Management App</string>
    <string name="add_employee">Add Employee</string>
    <string name="employee_id">Employee I.D.</string>
    <string name="find_employee_id">Find employee (ID)</string>
    <string name="show_all_employees">Show all employees</string>
    <string name="phone">Phone</string>
    <string name="add_new_employee">Add new employee</string>
    <string name="full_name">Full name</string>
    <string name="position">Position</string>
    <string name="address">Address</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="view_all_employees">View all employees</string>
    <string name="remove">Remove</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
</resources>
